improve invalid version reporting
Fixes NameError:

vagrant-kvm-0.1.2/lib/vagrant-kvm/driver/dr
iver.rb:51:in `initialize': uninitialized constant Vagrant::Errors::KvmInvalidVe
rsion (NameError)

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -2,3 +2,7 @@ en:
   vagrant_kvm:
     test_message: |-
       This is a test message.
+    errors:
+      kvm_invalid_version: |-
+        Invalid Kvm version detected: %{actual}, but a version %{required} is
+        required.
