--- a/locales/en.yml
+++ b/locales/en.yml
@@ -10,3 +10,5 @@ en:
       kvm_invalid_version: |-
         Invalid Kvm version detected: %{actual}, but a version %{required} is
         required.
+      kvm_no_qemu_binary: |-
+        Executable binary of qemu could not be found. Please re-examine %{cause}.
